objects/Partner_Contract_Request__c.object
<CustomObject>
    <fields>
        <fullName>Application_Id__c</fullName>
        <formula>Partner_Business_Terms_and_Conditions__r.Partner_Application__c</formula>
        <label>Application Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <formula>Partner_Business_Terms_and_Conditions__r.Partner_Application__r.Name</formula>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Categories_and_Countries__c</fullName>
        <label>Approved Categories and Countries</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value Added Reseller (VAR)</fullName>
                </value>
                <value>
                    <fullName>Specialized Reseller</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner</fullName>
                </value>
                <value>
                    <fullName>Subcontractor to Genesys</fullName>
                </value>
                <value>
                    <fullName>Services Partner Who Offers Own Services</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Technology Partner</fullName>
                </value>
                <value>
                    <fullName>OEM Partner (outbound)</fullName>
                </value>
                <value>
                    <fullName>Cloud Referral Partner</fullName>
                </value>
                <value>
                    <fullName>Contract Reseller</fullName>
                </value>
                <value>
                    <fullName>Global Strategic Alliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Documents_Required__c</fullName>
        <label>Contract Documents Required</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currencies__c</fullName>
        <label>Currencies</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Comments_Instructions__c</fullName>
        <label>Other Comments/Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Terms_and_Conditions__c</fullName>
        <label>Partner Business Terms and Conditions</label>
        <referenceTo>Partner_Business_Terms_and_Conditions__c</referenceTo>
        <relationshipLabel>Partner Contract Requests</relationshipLabel>
        <relationshipName>Partner_Contract_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Partner_Business_Terms_and_Conditions__r.Partner_Application__r.Account__r.Name</formula>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <label>Solutions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>Specialized VAR specialization</fullName>
                </value>
                <value>
                    <fullName>Suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_C_Id__c</fullName>
        <formula>Partner_Business_Terms_and_Conditions__r.Id</formula>
        <label>T &amp; C Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Notes__c</fullName>
        <label>Territory Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Partner Contract Request</label>
    <nameField>
        <displayFormat>PCR-{00000}</displayFormat>
        <label>Partner Contract Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Contract Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>